# picpro

./: .gitignore  .gitlab-ci.yml  .version.yml  DONATIONS.md  MANIFEST.in  README.md  chipinfo.cid  data_string.py  hex_file_reader.py  manage.py  picpro.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-test.yml
archlinux/: PKGBUILD
doc/: Microbrn-dump.logicdata  Protocol P014.txt  Protocol P016.txt  Protocol P018.txt  Protocol P18A (reverse engineering).txt  dump.txt  export_tx.csv  protocol.txt  protocol.txt.old  protocol_wth.txt
firmwares/Firmware v14 (Protocol P00A)/: k128.hex  k149a.hex  k149b.hex  k150.hex
firmwares/Firmware v15 (Protocol P00D)/: k128.hex  k149a.hex  k149b.hex  k150.hex
firmwares/Firmware v16 (Protocol P00D)/: k128.hex  k149a.hex  k149b.hex  k150.hex
firmwares/Firmware v17 (Protocol P013)/: k128.hex  k149a.hex  k149b.hex  k150.hex
firmwares/Firmware v19 (Protocol P013)/: k128.hex  k149a.hex  k149b.hex  k150.hex
firmwares/Firmware v20 (Protocol P013)/: k128.hex  k149a.hex  k149b.hex  k150.hex
firmwares/Firmware v22 (Protocol P016)/: k128.hex  k149a.hex  k149bc.hex  k150.hex
firmwares/Firmware v23 (Protocol P018)/: k128.hex  k149a.hex  k149bc.hex  k150.hex  k182.hex
firmwares/Firmware v25a (Protocol P018)/: k128.hex  k149a.hex  k149bc.hex  k150.hex  k182.hex
firmwares/Firmware v25ep (Protocol P18A)/: k128.hex  k149a.hex  k149bf.hex  k150.hex  k182.hex
pic_k150_programmer/: ChipInfoEntry.py  ChipInfoReader.py  DataString.py  HexFileReader.py  HexInt.py  IChipInfoEntry.py  ProgrammingVars.py  ProtocolInterface.py  exceptions.py  tools.py
picpro/: ChipInfoEntry.py  ChipInfoReader.py  FlashData.py  FlashDataIntel.py  HexFileReader.py  IChipInfoEntry.py  ProgrammingVariables.py  ProgrammingVars.py  ProtocolInterface.py  __main__.py  tools.py
picpro/data/: chipdata.cid
picpro/protocol/: ChipConfig.py  IConnection.py  IFuseTransaction.py  IProgrammingInterface.py  enums.py
picpro/protocol/p014/: Connection.py  ProgrammingInterface.py
picpro_gui/: socket.py  window.py
tests/: P018MockedDevice.py  P018aMockedDevice.py  conftest.py  test.hex  test_ChipConfig.py  test_ChipInfoEntry.py  test_ChipInfoReader.py  test_FlashData.py  test_FlashDataIntel.py  test_HexFileReader.py  test_P018_protocol.py  test_P018a_protocol.py  test_chip_data.cid
(+7 files in other folders)
